Add delete cetification and skill
